Created efficient system of server communication to clients.
The phone which requests is the client, and the phone that accepts a request hosts the server.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     tools:context=".MainActivity"
     android:id="@+id/parentRelLayout">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="12345"
+        android:layout_above="@id/waitingRelLayout"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/edtTxtPort"/>
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
