--- a/app/src/main/res/layout/peer_list_item.xml
+++ b/app/src/main/res/layout/peer_list_item.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="7dp"
     android:elevation="7dp"
-    android:id="@+id/parent">
+    android:id="@+id/parent"
+    android:layout_margin="20dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
