--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#00E676</color>
-    <color name="red">#FF1744</color>
+    <color name="green">#C4085A24</color>
+    <color name="red">#710505</color>
 </resources>
