--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,59 +2,58 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentRelLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:id="@+id/parentRelLayout">
+    tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/edtTxtPort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="7775"
         android:layout_above="@id/waitingRelLayout"
         android:layout_centerHorizontal="true"
-        android:id="@+id/edtTxtPort"/>
+        android:text="7775" />
 
 
     <RelativeLayout
+        android:id="@+id/waitingRelLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/waitingRelLayout">
+        android:layout_centerInParent="true">
 
         <TextView
+            android:id="@+id/txtReceive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/txtReceive"
-            android:text="Waiting for responses..."/>
+            android:text="Waiting for responses..." />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/txtReceive"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:id="@+id/recView"/>
+            android:layout_marginTop="5dp" />
 
     </RelativeLayout>
 
     <Button
+        android:id="@+id/btnRefresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnRefresh"
         android:layout_below="@id/waitingRelLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        android:text="Refresh"/>
+        android:text="Refresh" />
 
     <Button
+        android:id="@+id/btnBegin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnBegin"
-        android:text="Begin"
         android:layout_below="@id/btnRefresh"
-        android:layout_centerHorizontal="true"/>
-
+        android:layout_centerHorizontal="true"
+        android:text="Begin" />
 
 
 </RelativeLayout>
