--- a/app/src/main/res/layout/peer_list_item.xml
+++ b/app/src/main/res/layout/peer_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="7dp"
+    android:layout_margin="5dp"
     android:elevation="7dp"
-    android:id="@+id/parent"
-    android:layout_margin="5dp">
+    app:cardCornerRadius="7dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,48 +14,48 @@
         android:layout_margin="20dp">
 
         <LinearLayout
+            android:id="@+id/hostLinLayout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hostLinLayout">
+            android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/txtHost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Host Name: "
-                android:id="@+id/txtHost"
-                android:textStyle="bold"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtHostName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtHostName"
                 android:text="Host Name"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_below="@id/hostLinLayout"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/txtAddress"
-                android:text="Address: "
-                android:textStyle="bold"
-                android:textSize="15sp"/>
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Address: "
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/txtAddressName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Mac Address"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
 
         </LinearLayout>
 
