--- a/app/src/main/res/layout/player_lobby_item.xml
+++ b/app/src/main/res/layout/player_lobby_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp">
 
@@ -10,13 +10,13 @@
         android:layout_margin="5dp">
 
         <TextView
+            android:id="@+id/txtPlayerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:text="Player Name"
-            android:textStyle="bold"
             android:textSize="18sp"
-            android:id="@+id/txtPlayerName"
-            android:layout_centerHorizontal="true"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
 
