--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,20 @@
         android:layout_centerInParent="true">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnServerBrowser"
             android:text="Server Browser"
             android:textAllCaps="false"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnHowToPlay"
             android:text="How To Play"
             android:textAllCaps="false"
-            android:layout_toRightOf="@id/btnServerBrowser"
-            android:layout_marginLeft="10dp"/>
+            android:layout_below="@id/btnServerBrowser"
+            android:layout_marginTop="8dp"/>
 
     </RelativeLayout>
 
